# seafutils

./: .gitignore  PKG-INFO  README.md  ccnet.service  config-generator.py  python2-seafutil.spec  requirements.txt  seafile.service  seafutil.service  seafutil.spec  seafutils.spec  seahub.service  setup.cfg  setup.py
config-generator/: make.py  server.conf
doc/: cmd.md  firewalld.md  memcached
doc/conf/: seahub.conf  seahub.ini
doc/script/: seafile-controller.c  seafile-freebsd-init.sh  setup-seafile-mysql.py
doc/spec/: ccnet.spec  libevhtp-1.1.6-makefile.patch  libevhtp-1.1.6.spec  libsearpc.spec  seafile.spec
etc/: seafile.conf
etc/firewalld/services/: seafile-server.xml
etc/nginx/: seahub.conf
etc/nginx/conf.d/: seahub.conf
etc/seafile/: memcached
etc/sysconfig/: seafile
etc/uwsgi.d/: seahub.ini
rpmbuild/: README.md  ccnet.spec  libevhtp-1.1.6-makefile.patch  libevhtp-1.1.6.spec  libsearpc.spec  python2-simplejson.spec  seafile-sysuser.conf  seafile.spec  seahub.postgres.sql  seahub.spec
rpmbuild/aria2d/: README.md  arai2d.service  aria2d-nginx.conf  aria2d.conf  aria2d.spec
sbin/: seafile-init-ccnet  seafile-init-seahub  seafile-init-server  seafutil-init-admin  seafutil-init-admin.py  seafutil-init-ccnet  seafutil-init-seafile  seafutil-init-seahub
seafutil/: ccnet.py  command.py  config.py  seafile.py  seahub.py
seafutil/dbengine/: __init__.py  mysql.py
seafutils/: __init__.py  utils.py
seafutils/app/: clean.py  django.py  dump.py  fsck.py  gc.py  initialize.py  reset.py  seafile.py  upgrade.py
seafutils/config/: base.py  ccnet.py  cmd.py  initialize.py  seafile.py  seahub.py  templates.py
seafutils/launcher/: ccent.py  ccnet.py  seafile.py  seahub.py
test/: test.py
