[metadata]
name = seafutils
version = 1.0.1
summary = seafile utils
description-file =
    README.md
license = MIT
author = Lolizeppelin
author-email = lolizeppelin@gmail.com
home-page = https://github.com/lolizeppelin/seafutils
classifier =
    Environment :: Lolizeppelin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: MIT
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_reno]
output-file = RELEASENOTES.txt

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0


[files]
packages =
    seafutils

[entry_points]
oslo.config.opts =
    seafile = seafutils.config.base:list_opts
    seafile.init = seafutils.config.initialize:list_opts


seafutils.app =
    dump = seafutils.app.dump:run
    fsck = seafutils.app.fsck:run
    gc = seafutils.app.gc:run
    init = seafutils.app.initialize:run
    upgrade = seafutils.app.upgrade:run

seafutils.launcher =
    ccnet = seafutils.launcher.ccnet:run
    seafile = seafutils.launcher.seafile:run
    seahub = seafutils.launcher.seahub:run
