[metadata]
name = seafutils
version = VERSION
summary = seafile utils
description_file =
    README.md
license = MIT
author = Lolizeppelin
author_email = lolizeppelin@gmail.com
home_page = https://github.com/lolizeppelin/seafutils
classifier =
    Environment :: Lolizeppelin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: MIT
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_reno]
output-file = RELEASENOTES.txt

[wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0


[files]
packages =
    seafutils
extra_files =
    requirements.txt


[entry_points]
oslo.config.opts =
    seafile = seafutils.config.base:list_opts
    seafile.init = seafutils.config.initialize:list_opts


seafutils.app =
    init = seafutils.app.initialize:run
    dump = seafutils.app.seafile:dump
    fsck = seafutils.app.seafile:fsck
    gc = seafutils.app.seafile:gc
    reset = seafutils.app.django:reset
    clean = seafutils.app.django:clean

seafutils.launcher =
    ccnet = seafutils.launcher.ccnet:run
    seafile = seafutils.launcher.seafile:run
    seahub = seafutils.launcher.seahub:run
